--- a/trystyle.css
+++ b/trystyle.css
@@ -1,69 +1,72 @@
- ul{
- 	list-style-type: none; /*Remove bullets*/
- 	margin: 0;
- 	padding: 0;
- 	width: 200px;
- 	background-color: #E8EAEA;
- 	
- }
+a{
+	color: black;
+}
+nav{
+	margin-left: 4%;
+	margin-right: 4%;
+	 
+
+}
+nav ul{
+	 
+	 
+	background: #211f1f73;
+	padding: 0;
+	text-align:center;
+	margin: 0;
+	
+}
+nav ul li{
+	display: inline-block;
+	padding-left: 5em;
+	padding-right: 5em;
+
+}
+
  li a{
  		display: block;/*Display makes whole area block to be clickable not just text*/
-	 	width: 150px; 
-	 	padding: 50px 20px;
-	 	color:#20858E  ;
+	 	width: 0.2em; 
+	 	padding: 1% 1%;
+	 	color:#06e1f5d6  ;
 	 	text-decoration: none;
  }
  li a:hover {
   background-color: #555;
   color:#000 ;
 }
- 
-
-ul{
-	border :1px solid #555;
-}
 body{
-	background-color: #211517 ;
+	background-image: url('back.jpg');
 
 
 }
-.i{
-	font-size: 50px;
-	font-family: 'Dancing Script', cursive;}
-.j
+ 
+.i
 {
  font-size: 30px;
  font-family: 'Dancing Script', cursive;
 }
-.container{
-	margin-top: 1.5%;
-	margin-bottom: 1%;
-	margin-left: 2%;
-	margin-right: 2%;
-	display: flex;
-	max-height: 110%;
-	max-width: 150%; 
-	border-style: ;
-}
+ 
 #name{
 	font-size: 200%;
-	color: white;
+	color: #000;
 	text-align: center;
 	font-family: 'Thasadith', sans-serif;
 
 }
 #tag
 {
-	font-size: 150%;
-	color: white;
+	font-size: 190%;
+	color: #000;
 	text-align: center; 
 	font-family: 'Thasadith', sans-serif;
 
 }
 .container2{ 
 	 
-	background-color: #1D666C ;
-	 max-width: 93%;
+	background-color: #ffffffad;
+	 border :1px solid #555;
+	 margin-left: 5%;
+	 margin-right: 5%;
 	  
 
 }
@@ -72,4 +75,143 @@ body{
 	 font-family: 'Dancing Script', cursive;
 	 color: white;
 	 text-align: center;
+}
+.containerabout{
+	margin-right: 4%;
+    margin-left: 4%;
+	height: 190px;
+	background-color:#211f1f73; 
+	border :2px solid #555;
+	text-align: center;
+	display: flex;
+	margin-top: 20%;
+}
+
+#about{
+margin-top: 6%;margin-left: 2%;
+	font-size: 50px;color: #06e1f5d6  ;
+	text-align: center;font-family: 'Dancing Script', cursive;
+}
+.container-2{
+	margin-right: 6%;
+    margin-left: 6%;
+	 
+	padding: 1px 1px 0px 1px;
+	display: block;
+	position: absolute;
+	border :2px solid #555;
+	font-family: 'Rajdhani', sans-serif;
+	font-size: 1.4rem;
+ 
+	 background-color: #ffffffad;
+
+}
+ .containercontact1{
+	border :2px solid #555;
+	margin-left: 17%;
+	margin-top: 75%;
+	margin-right: 15%;
+	margin-bottom: 19%;  
+	background: #ffffffad;
+	padding: inherit;
+	position: relative;
+}
+h2{
+	font-family: 'Rajdhani', sans-serif;
+	text-align: center;
+}
+
+label{
+	font-size: 140%; 
+	font-weight: bold;
+	color: black;
+	font-family: 'Rajdhani', sans-serif;
+	padding-right: 5%; 
+	padding-left: 5%;
+	position: relative;
+}
+#rowinput{
+	display: block;
+  width: 80%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  margin-left: 10%;
+  font-weight: 800;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.30rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+	font-family: 'Rajdhani', sans-serif;
+	position: relative;
+
+}
+#rowmessage{
+  display: block;
+  width: 80%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  margin-left: 10%;
+  font-weight: 800;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+font-family: 'Rajdhani', sans-serif;
+position: relative;
+}
+.btn-secondary {
+     font-size: x-large;
+    color: #fff;
+    background-color: #6c757d;
+    border-color: #6c757d;
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-top: 2%;
+    padding-bottom: 1%;margin-left: 40%;
+}
+
+.btn-secondary:hover {
+  color: #fff;
+  background-color: #5a6268;
+  border-color: #545b62;
+}
+
+.btn-secondary:focus, .btn-secondary.focus {
+  box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
+}
+
+.btn-secondary.disabled, .btn-secondary:disabled {
+  color: #fff;
+  background-color: #6c757d;
+  border-color: #6c757d;
+}
+
+.btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active,
+.show > .btn-secondary.dropdown-toggle {
+  color: #fff;
+  background-color: #545b62;
+  border-color: #4e555b;
+}
+
+.btn-secondary:not(:disabled):not(.disabled):active:focus, .btn-secondary:not(:disabled):not(.disabled).active:focus,
+.show > .btn-secondary.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
+}
+
+.footer{
+	display: block;
+	background: #555;
+	padding-bottom: 1.5%;
+	padding-top: 1.5%;
+
+
+}
+#foo{
+	text-align: center;
 }
