--- a/trystyle.css
+++ b/trystyle.css
@@ -10,7 +10,7 @@ nav{
 nav ul{
 	 
 	 
-	background: #211f1f73;
+	background: #000000fa;
 	padding: 0;
 	text-align:center;
 	margin: 0;
@@ -27,39 +27,33 @@ nav ul li{
  		display: block;/*Display makes whole area block to be clickable not just text*/
 	 	width: 0.2em; 
 	 	padding: 1% 1%;
-	 	color:#06e1f5d6  ;
+	 	color:#ffffff  ;
 	 	text-decoration: none;
  }
  li a:hover {
   background-color: #555;
-  color:#000 ;
-}
-.form{
-	width: 50%;
-	border-right: 1px solid black; 
- 	height: 2%;
-	padding: 2%;
+  color:rgba(187, 187, 187, 0.63);
 }
 
 .i
 {
- font-size: 30px;
- font-family: 'Dancing Script', cursive;
+	font-size:1.2rem;
+ font-family: 'Open Sans Condensed', sans-serif;
 }
  
 #name{
-	font-size: 200%;
+	font-size: 160%;
 	color: #000;
 	text-align: center;
-	font-family: 'Thasadith', sans-serif;
+	font-family: 'Open Sans Condensed', sans-serif;
 
 }
 #tag
 {
-	font-size: 190%;
+	font-size: 140%;
 	color: #000;
 	text-align: center; 
-	font-family: 'Thasadith', sans-serif;
+	font-family: 'Open Sans Condensed', sans-serif;
 
 }
 .container2{ 
@@ -68,6 +62,9 @@ nav ul li{
 	 border :1px solid #555;
 	 margin-left: 5%;
 	 margin-right: 5%;
+	  -webkit-box-shadow:0 1px 16px 16px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+	 -moz-box-shadow:0 1px 16px 16px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+		  box-shadow:0 1px 16px 16px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 	  
 
 }
@@ -80,18 +77,32 @@ nav ul li{
 .containerabout{
 	margin-right: 4%;
     margin-left: 4%;
-	height: 190px;
-	background-color:#211f1f73; 
+	height: 150px;
+	background-color:#050505; 
 	border :2px solid #555;
 	text-align: center;
 	display: flex;
 	margin-top: 20%;
+	 -webkit-box-shadow:0 1px 16px 16px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+	-moz-box-shadow:0 1px 16px 16px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+		  box-shadow:0 1px 16px 16px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 }
-
+.containercontact{
+	margin-right: 4%;
+    margin-left: 4%;
+	height: 130px;
+	background-color:#050505; 
+	border :2px solid #555;
+	text-align: center; 
+	margin-top: 20%;
+	 -webkit-box-shadow:0 1px 16px 16px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+	-moz-box-shadow:0 1px 16px 16px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+		  box-shadow:0 1px 16px 16px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
 #about{
 margin-top: 6%;margin-left: 2%;
-	font-size: 50px;color: #06e1f5d6  ;
-	text-align: center;font-family: 'Dancing Script', cursive;
+	font-size:2rem;color: #ffffff  ;
+	text-align: center;font-family: 'Open Sans Condensed', sans-serif;
 }
 .container-2{
 	margin-right: 6%;
@@ -101,23 +112,40 @@ margin-top: 6%;margin-left: 2%;
 	display: block;
 	position: relative;
 	border :2px solid #555;
-	font-family: 'Rajdhani', sans-serif;
+	font-family: 'Open Sans Condensed', sans-serif;
 	font-size: 1.4rem; 
 	 background-color: #ffffffad;
-
+	  -webkit-box-shadow:0 1px 16px 16px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+	 -moz-box-shadow:0 1px 16px 16px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+		   box-shadow:0 1px 16px 16px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
+.form{
+	width: 47%;
+	border-right: 1px solid black; 
+ 	height: 2%;
+	float:left; 
+}
+.info{
+	width: 47%;
+	height: 2%;
+	float : right; 
 }
  .containercontact1{
 	border :2px solid #555;
-	margin-left: 6%;
-	margin-top: 20%;
+	width: 84%;
+	height: -webkit-fill-available;
+	margin-left: 6%; 
 	margin-right: 6%;
 	margin-bottom: 19%;  
 	background: #ffffffad;
 	padding: 2%;
 	position: relative;
+	 -webkit-box-shadow:0 1px 16px 16px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+	-moz-box-shadow:0 1px 16px 16px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+		  box-shadow:0 1px 16px 16px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 }
 h2{
-	font-family: 'Rajdhani', sans-serif;
+	font-family: 'Open Sans Condensed', sans-serif;
 	text-align: center;
 }
 
@@ -125,7 +153,7 @@ label{
 	font-size: 140%; 
 	font-weight: bold;
 	color: black;
-	font-family: 'Rajdhani', sans-serif;
+	font-family: 'Open Sans Condensed', sans-serif;
 	padding-right: 5%; 
 	padding-left: 5%;
 	position: relative;
@@ -144,7 +172,7 @@ label{
   border: 1px solid #ced4da;
   border-radius: 0.30rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-	font-family: 'Rajdhani', sans-serif;
+	font-family: 'Open Sans Condensed', sans-serif;
 	position: relative;
 
 }
@@ -162,45 +190,27 @@ label{
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-font-family: 'Rajdhani', sans-serif;
+font-family: 'Open Sans Condensed', sans-serif;
 position: relative;
 }
-.btn-secondary {
-     font-size: x-large;
-    color: #fff;
-    background-color: #6c757d;
-    border-color: #6c757d;
-    padding-left: 3%;
-    padding-right: 3%;
-    padding-top: 2%;
-    padding-bottom: 1%;margin-left: 40%;
+.btn{
+     font-size: 1.2rem;
+	color: #ffffff;
+	padding: 2%;
+    background-color:  #05080ccc;
+	margin-left: 40%;
+	border-radius: 10px;
+	box-shadow:0 1px 16px 8px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+	font-family: 'Open Sans Condensed', sans-serif;
 }
 
-.btn-secondary:hover {
-  color: #fff;
-  background-color: #5a6268;
-  border-color: #545b62;
+.btn:hover {
+  color: #ffffff;
+  background-color: #003f05a2;
+  border-color: #00080f;
 }
 
 .btn-secondary:focus, .btn-secondary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
-}
-
-.btn-secondary.disabled, .btn-secondary:disabled {
-  color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
-}
-
-.btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active,
-.show > .btn-secondary.dropdown-toggle {
-  color: #fff;
-  background-color: #545b62;
-  border-color: #4e555b;
-}
-
-.btn-secondary:not(:disabled):not(.disabled):active:focus, .btn-secondary:not(:disabled):not(.disabled).active:focus,
-.show > .btn-secondary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
 }
 
