--- a/trystyle.css
+++ b/trystyle.css
@@ -4,7 +4,6 @@ a{
 nav{
 	margin-left: 4%;
 	margin-right: 4%;
-	 
 
 }
 nav ul{
@@ -133,7 +132,7 @@ margin-top: 6%;margin-left: 2%;
  .containercontact1{
 	border :2px solid #555;
 	width: 84%;
-	height: -webkit-fill-available;
+	min-height	:28em;
 	margin-left: 6%; 
 	margin-right: 6%;
 	margin-bottom: 19%;  
@@ -215,7 +214,7 @@ position: relative;
 }
 
 .footer{
-	display: block;
+	display: block; 
 	background: #555;
 	padding-bottom: 1.5%;
 	padding-top: 1.5%;
@@ -225,3 +224,79 @@ position: relative;
 #foo{
 	text-align: center;
 }
+
+.containerskill{
+	margin-right: 6%;
+    margin-left: 6%;
+	 
+	padding:3%; 
+	position: relative;
+	border :2px solid #555;
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-size: 1.4rem; 
+	 background-color: #ffffffad;
+	  -webkit-box-shadow:0 1px 16px 16px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+	 -moz-box-shadow:0 1px 16px 16px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+		   box-shadow:0 1px 16px 16px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
+.row {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 0 4px;
+  }
+  
+  /* Create two equal columns that sits next to each other */
+  .column {
+	flex: 50%;
+	padding: 0 4px;
+  }
+  
+  .column img {
+	margin-top: 8px;
+	vertical-align: middle;
+  }
+
+  .fa {
+	padding: 20px;
+	font-size: 30px;
+	width: 50px;
+	text-align: center;
+	text-decoration: none;
+	margin: 5px 2px;
+	border-radius:6%; 
+  }
+  
+  .fa:hover {
+	  opacity: 0.7;
+  }
+  
+  .fa-facebook {
+	background: #3B5998;
+	color: white;
+  }
+  
+  .fa-github {
+	background: rgb(239, 242, 245);
+	color: black;
+  }
+  
+  .fa-google {
+	background: #dd4b39;
+	color: white;
+  }
+  
+  .fa-linkedin {
+	background: #007bb5;
+	color: white;
+  }
+  
+  .fa-youtube {
+	background: #bb0000;
+	color: white;
+  }
+  
+  .fa-instagram {
+	background: white;
+	color: #fd6004;
+  }
+  
